export class Article {
    id:number;
    nom:String;
    prix:number;
    img:String;
    description:String;
    categorie:String;
    sousCategorie:String;
    fabricant:String;
    version:number
}
