export class Catesous {
    categorie: string;
    sous: Array<string>;
    constructor(categorie, sous) {
        (3)
        this.categorie = categorie;
        this.sous = sous;
    }
}